packages/ui/src/components/ESInputTextArea/ESInputTextArea.module.css
.ESInputTextArea {
  /* Layout */
  display: inline-flex;
  position: relative;
  flex-direction: column;
  justify-content: space-between;
  width: 100%;
  box-sizing: border-box;
  overflow: auto;
  min-height: var(--esnet-size-spacing-xxxlarge, 5.5rem);
  min-width: var(--esnet-size-spacing-xxxlarge, 5.5rem);

  /* Styling */
  background-color: var(--esnet-color-core-white-100, #ffffff);
  color: var(--esnet-color-light-copy, #3d3d3d);
  border-style: solid;
  border-width: var(--esnet-size-border-width-xsmall, 0.0625rem);
  border-color: var(--esnet-color-core-slate-900, #3f424d);

  transition:
    border-color var(--esnet-time-duration-quick, 250ms) ease,
    box-shadow var(--esnet-time-duration-quick, 250ms) ease;

  :global(.dark) & {
    background-color: var(--esnet-color-dark-surface-1, #19191a);
    color: var(--esnet-color-dark-copy, #ffffff);
    border-color: var(--esnet-color-core-slate-100, #c3c7d9);
  }

  /* Typography */
  font: var(--esnet-typography-copy-1-sans-font,
    400 16px/120% var(--esnet-font-family-body-sans));

  /* Pseudo-events */
  /* based on a pseudo event of input tag (invalid), thus included here */
  &.error {
    border-color: var(--esnet-color-core-red-700, #a6111b);
    border-width: var(--esnet-size-border-width-small, 0.125rem);
    box-shadow: 0 0 0 var(--esnet-size-border-width-small) color-mix(in srgb,
        var(--esnet-color-light-error, #a6111b) 26%,
        transparent);
  }

  &:hover:not(.disabled),
  &:focus-within:not(.disabled),
  &:has(*:active):not(.disabled) {
    /* border color on focus takes precedence over error border color */
    border-color: var(--esnet-color-core-slate-1000, #30333b);
    box-shadow: 0 0 0 var(--esnet-size-border-width-small, 0.125rem) var(--esnet-color-core-blue-400, #00b6f2);
  }

  /* based on a pseudo event of input tag (disabled), thus included here */
  &.disabled {
    border-color: var(--esnet-color-core-slate-300, #9699a8);
  }

  :global(.dark) &.disabled {
    border-color: var(--esnet-color-core-slate-500, #787b87);
  }

  /* Variants */
  &.branded {
    border-radius: var(--esnet-size-radius-xlarge, 6px);
  }

  /* Modifiers */
  &.vertical {
    resize: vertical;
  }

  &.horizontal {
    resize: horizontal;
  }

  &.both {
    resize: both;
  }

  &.none {
    resize: none;
  }
}

.textArea {
  all: unset;
  font: inherit;
  word-break: break-all;
  width: 100%;
  padding: var(--esnet-size-spacing-xsmall, 8px);
  flex: 1;
  height: fit-content;

  /* Pseudo-elements */
  &::-webkit-resizer {
    padding: var(--esnet-size-spacing-xxsmall, 4px);
    background-color: transparent;
    background-image: none;
  }

  &::-webkit-scrollbar {
    display: none;
  }

  &::placeholder {
    color: var(--esnet-color-light-copy-alt, #6e6e70);
  }

  :global(.dark) &::placeholder {
    color: var(--esnet-color-dark-copy-alt, #c2c2c2);
  }

  /* Pseudo-events */
  &:disabled {
    color: var(--esnet-color-core-white-900, #a8a8a8);

    &::placeholder {
      color: var(--esnet-color-core-white-900, #a8a8a8);
    }
  }

  :global(.dark) &:disabled {
    color: var(--esnet-color-core-white-900, #a8a8a8);

    &::placeholder {
      color: var(--esnet-color-core-white-900, #a8a8a8);
    }
  }
}

.textIcon {
  position: absolute;
  bottom: var(--esnet-size-spacing-xsmall, 8px);
  right: var(--esnet-size-spacing-xsmall, 8px);
  align-self: flex-end;
  color: inherit;
  transform: scaleX(-1);
  width: var(--esnet-size-spacing-medium, 16px);
  height: var(--esnet-size-spacing-medium, 16px);
}

